# routes/api.php
@@ -25,16 +25,39 @@ Route::group(['middleware' => 'web'], function () {
     Route::get('api/documentation', '\L5Swagger\Http\Controllers\SwaggerController@api')->name('l5swagger.api');
 });
 
+route::get('test',[UserController::class,'test']);
 
 Route::post("login", [AuthController::class, "login"]);
 Route::post("register", [AuthController::class, "register"]);
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Route::group(["prefix" => "", "middleware" => ["auth:sanctum"]], function () {
+
+    route::get('ReSendCode',[AuthController::class, "ReSendCode"]);
+    Route::post("VerifyEmail", [AuthController::class, "VerifyEmail"]);
+
+
+});
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 Route::group(["prefix" => "", "middleware" => ["auth:sanctum", "ActiveAccount"]], function () {
 
     Route::get("logout", [AuthController::class, "logout"]);
-    Route::get("profile", [UserController::class, "profile"]);
     Route::get('role', [UserController::class, 'role']);
-    Route::post("verifyemail", [AuthController::class, "verifyemail"]);
-});
 
+});
+///////////////////////////////////////admin api///////////////////////////////////////////////////////////////
+Route::group(["prefix" => "admin", "middleware" => ["auth:sanctum", "ActiveAccount","Abilities:admin"]], function () {
+
+    Route::get("users", [UserController::class, "AllUsers"]);
+    Route::get("GetUserById/{id}", [UserController::class, "GetUserById"]);
+
+});
+///////////////////////////////////////customer api///////////////////////////////////////////////////////////////
+Route::group(["prefix" => "customer", "middleware" => ["auth:sanctum", "ActiveAccount","Abilities:customer"]], function () {
+
+    Route::get("profile", [UserController::class, "profile"]);
+
+});
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////
